# ddb---sf-datat-ype-conversion

./: .gitignore  CMakeLists.txt  LICENSE  PROJECT_SUMMARY.md  README.md  vcpkg.json
docs/: type_mapping.md  type_mapping_reference.md
examples/: basic_usage.cpp  type_conversion_demo.cpp
src/: adbc_connector.cpp  snowflake_extension.cpp  type_converter.cpp
src/include/: adbc_connector.hpp  snowflake_extension.hpp  type_converter.hpp
test/: CMakeLists.txt
test/cpp/: test_type_converter.cpp
test/sql/: type_conversion.test  type_mapping.test
